<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        android:background="@drawable/input_bg"
        android:textColorHint="#B3B3B3"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:textColorHint="#B3B3B3"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:textColorHint="#B3B3B3"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/sign_up"
        android:background="@drawable/btn_bg"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="20dp"
        android:stateListAnimator="@null"
        android:onClick="openMain"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <Button
        android:id="@+id/signUpGoogleButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/ic_icons8_google"
        android:elevation="20dp"
        android:fontFamily="@font/quicksand"
        android:stateListAnimator="@null"
        android:text="@string/signup_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <Button
        android:id="@+id/signUpFacebookButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/ic_icons8_facebook_circled"
        android:elevation="20dp"
        android:fontFamily="@font/quicksand"
        android:stateListAnimator="@null"
        android:text="@string/signup_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpGoogleButton"
        app:layout_constraintStart_toStartOf="@+id/signUpGoogleButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpGoogleButton" />

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:fontFamily="@font/quicksand"
        android:text="@string/have_account"
        android:textColor="#757575"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/signUpFacebookButton"
        app:layout_constraintStart_toStartOf="@+id/signUpFacebookButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpFacebookButton" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/quicksand"
        android:text="@string/login"
        android:textColor="#757575"
        android:textSize="16dp"
        android:onClick="openLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/newAccountTextView"
        app:layout_constraintStart_toStartOf="@+id/newAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTextView"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>