<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        android:background="@drawable/input_bg"
        android:textColorHint="#B3B3B3"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:textColorHint="#B3B3B3"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/login"
        android:background="@drawable/btn_bg"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="20dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/loginGoogleButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/ic_icons8_google"
        android:elevation="20dp"
        android:fontFamily="@font/quicksand"
        android:stateListAnimator="@null"
        android:text="@string/login_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/loginFacebookButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/ic_icons8_facebook_circled"
        android:elevation="20dp"
        android:fontFamily="@font/quicksand"
        android:stateListAnimator="@null"
        android:text="@string/login_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginGoogleButton"
        app:layout_constraintStart_toStartOf="@+id/loginGoogleButton"
        app:layout_constraintTop_toBottomOf="@+id/loginGoogleButton" />

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:fontFamily="@font/quicksand"
        android:text="@string/new_account"
        android:onClick="openSignUp"
        android:textColor="#757575"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/loginFacebookButton"
        app:layout_constraintStart_toStartOf="@+id/loginFacebookButton"
        app:layout_constraintTop_toBottomOf="@+id/loginFacebookButton" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/quicksand"
        android:text="@string/forget_password"
        android:textColor="#757575"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/newAccountTextView"
        app:layout_constraintStart_toStartOf="@+id/newAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTextView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>