<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/circle3"
        android:drawableStart="@drawable/ic_user"
        android:elevation="20dp"
        android:paddingLeft="35dp"
        app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/quicksand"
        android:text="User Name"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/quicksand"
        android:text="username@gmail.com"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/earplugsLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/earplugsLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:padding="15dip"
        app:layout_constraintBottom_toTopOf="@+id/adviceLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/earplugsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="@font/quicksand"
            android:text="@string/earplugs"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/earplugsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle2"
            android:fontFamily="@font/quicksand"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calibrateLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        android:padding="15dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/calibrateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="@font/quicksand"
            android:text="@string/calibrate"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/calibrateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle2"
            android:drawableStart="@drawable/ic_plusminus"
            android:onClick="openDecibels"
            android:paddingLeft="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:padding="15dip"
        app:layout_constraintBottom_toTopOf="@+id/calibrateLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/backgroundTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="@font/quicksand"
            android:text="@string/background"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/backgroundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle2"
            android:fontFamily="@font/quicksand"
            android:text="@string/on"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adviceLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:padding="15dip"
        app:layout_constraintBottom_toTopOf="@+id/backgroundLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/adviceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="@font/quicksand"
            android:text="@string/advice"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/adviceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle2"
            android:fontFamily="@font/quicksand"
            android:text="@string/on"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/logOutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/logout"
        android:clickable="true"
        android:fontFamily="@font/quicksand"
        android:textColor="#757575"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/calibrateLayout"
        app:layout_constraintStart_toStartOf="@+id/calibrateLayout"
        app:layout_constraintTop_toBottomOf="@+id/calibrateLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>